--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -1,11 +1,26 @@
-body{
-    background-color: blue;
-}
-.img{
+:root {
+    --body-desktop-background-image: url('../../app/assets/image/rainbow-desktop-dragon.jpg');
+    --body-mobile-background-image: url('../../app/assets/image/rainbow-dragon-mobile.jpg');
+
+    
+  }
+  *{
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    
+    background-image: var(--body-desktop-background-image) ;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  
+  .img {
     margin-top: 100px;
     width: 200px;
     height: 200px;
-    background-image: url("https://thumbs.dreamstime.com/b/tiger-white-background-isolated-73110104.jpg");
     background-size: contain;
     mix-blend-mode: darken;
-}
+  }
+  
