--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,39 +1,41 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-.navBar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: wheat;
-    height: 10vh;
+.navBar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgba(0,0,0, .1);
+  backdrop-filter: blur(50);
+  height: 10vh;
+  z-index: 100;
 }
-.navContainerDesktop{
-    position: relative;
-    width: 50%;
-    right: -10%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: wheat;
+.navContainerDesktop {
+  position: relative;
+  width: 50%;
+  right: -10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: rgba(0,0,0, .1);
+  backdrop-filter: blur(50);
 }
-.navIcon{
-    width: 25%;
-    margin: 0 2%;
-    text-align: center;
+.navIcon {
+  width: 25%;
+  margin: 0 2%;
+  text-align: center;
 }
-.navContainerMobile{
-    display: none;
+.navContainerMobile {
+  display: none;
 }
 
 @media screen and (max-width: 750px) {
-    .navContainerDesktop{
-        display: none;
-    }
-    .navContainerMobile{
-        display: block;
-    }
-
+  .navContainerDesktop {
+    display: none;
+  }
+  .navContainerMobile {
+    display: block;
+  }
 }
