--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,14 +3,30 @@
 @import "tailwindcss/utilities";
 
 .navBar {
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 1.3px 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  background-color: rgba(0,0,0, .1);
-  backdrop-filter: blur(50);
+  background-color: rgba(0, 0, 0, .1);
+  backdrop-filter: blur(50px);
   height: 10vh;
   z-index: 100;
+}
+
+.logo{
+  font-size: 16px;
+  color:white;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.menuIcon {
+  cursor: pointer;
+  font-size: 20px;
 }
 .navContainerDesktop {
   position: relative;
@@ -19,8 +35,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: rgba(0,0,0, .1);
-  backdrop-filter: blur(50);
+  /* background-color: rgba(0,0,0, .1);  */
+  /* backdrop-filter: blur(50); */
 }
 .navIcon {
   width: 25%;
